# ms-rags-all-in-one-

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  constraints-production.txt  install.bat  install.sh  ms_rag_metrics.jsonl  pyproject.toml  requirements.txt  vercel.json
.deepeval/: .deepeval_telemetry.txt
Resume/: Muhammad-Saad-Bin-Mazhar-Resume.docx  Muhammad_Saad_Resume_AI_ENGINEER.docx  Saad_Backend_Engineer_Resume.docx
chroma_db/: chroma.sqlite3
docs/: 404.html  README.md  databases.html  getting-started.html  index.html  pipeline.html  production.html  rag-types.html  recommendations.html  resources.html  security.html  sitemap.xml
docs-deploy/: README.md  databases.html  index.html  package.json  pipeline.html  production.html  rag-types.html  recommendations.html  vercel.json
docs-deploy/assets/: app.js  styles.css
ms_rag/: __init__.py  __main__.py  models.py
ms_rag/agent/: __init__.py  tool_configurator.py  tools.py
ms_rag/cli/: __init__.py  main.py  query_loop.py
ms_rag/codegen/: __init__.py  code_generator.py
ms_rag/config/: __init__.py  credential_manager.py
ms_rag/evaluation/: __init__.py  evaluation_framework.py  evaluator_runners.py
ms_rag/ingestion/: __init__.py  chunking_engine.py  dependency_preflight.py  document_type_selector.py  graph_store.py  ingestion_orchestrator.py  keyword_store.py  loader_selector.py  vectordb_connector.py  vectorization_module.py
ms_rag/llm/: __init__.py  llm_integration.py
ms_rag/query/: __init__.py  compression_retriever.py  context_compressor.py  query_enhancer.py  reranking_module.py  reranking_retriever.py  retrieval_strategy.py  semantic_cache.py
ms_rag/session/: __init__.py  session_manager.py
ms_rag/ui/: __init__.py  architecture.py  banner.py  prompts.py
ms_rag/utils/: __init__.py  credentials.py  error_formatting.py  exceptions.py  logging.py  metadata.py  retry.py  runtime_cleanup.py  telemetry.py  validation.py
ms_rag/workflow/: __init__.py  chunking_configurator.py  rag_presets.py  rag_type_selector.py  system_prompt_configurator.py
scripts/: audit_imports.py  live_smoke_audit.py  verify_16_step_workflow.py
tests/: conftest.py
tests/integration/: test_end_to_end.py  test_rebuild_session_runtime.py
tests/property/: test_chunking_configurator_properties.py  test_chunking_properties.py  test_codegen_properties.py  test_compression_properties.py  test_credential_properties.py  test_document_type_properties.py  test_error_handling_properties.py  test_ingestion_properties.py  test_loader_properties.py  test_pipeline_config_properties.py  test_query_enhancement_properties.py  test_query_loop_properties.py  test_rag_type_properties.py  test_reranking_properties.py  test_session_manager_properties.py  test_system_prompt_properties.py  test_validation_properties.py  test_vectorization_properties.py
tests/smoke/: __init__.py  test_vector_db_smoke.py
tests/unit/: test_agent_tools.py  test_architecture_visibility.py  test_audit_imports.py  test_banner.py  test_cli_preset_helpers.py  test_credentials.py  test_dependency_preflight.py  test_error_formatting.py  test_evaluation_framework.py  test_graph_store.py  test_keyword_store.py  test_llm_integration.py  test_logging.py  test_metadata.py  test_rag_presets.py  test_retrieval_strategy.py  test_runtime_cleanup.py  test_telemetry.py  test_ui_prompts.py  test_vectordb_connector.py
