[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ms-rag"
version = "0.1.0"
description = "Production-Grade RAG Framework Builder — terminal-based interactive CLI"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    # Terminal UI
    "rich>=13.0.0",
    "questionary>=2.0.0",

    # CLI framework
    "click>=8.1.0",

    # LangChain core
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-text-splitters>=0.3.0",

    # LangGraph (agentic RAG)
    "langgraph>=0.2.0",

    # LLM provider packages
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "langchain-cohere>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-mistralai>=0.2.0",
    "langchain-groq>=0.2.0",

    # HuggingFace (NOT langchain-community — deprecated)
    "langchain-huggingface>=0.1.0",
    "sentence-transformers>=3.0.0",

    # Ollama (NOT langchain-community — deprecated)
    "langchain-ollama>=0.2.0",

    # Document loaders — all formats supported out of the box
    "langchain-unstructured>=0.1.0",
    "unstructured>=0.15.0",
    "python-docx>=1.1.0",
    "docx2txt>=0.8",
    "openpyxl>=3.1.0",
    "pypdf>=4.0.0",
    "pdfplumber>=0.11.0",
    "tabula-py>=2.9.0",
    "camelot-py>=0.11.0",

    # LangChain experimental (SemanticChunker)
    "langchain-experimental>=0.3.0",

    # Vector stores (core — always available)
    "langchain-chroma>=0.1.0",
    "chromadb>=0.5.0",
    "faiss-cpu>=1.8.0",

    # Web loaders
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "lxml>=5.0.0",

    # YouTube transcript loader
    "youtube-transcript-api>=0.6.0",
    "pytube>=15.0.0",

    # BM25 / TF-IDF retrieval
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.4.0",

    # Credential encryption
    "cryptography>=41.0.0",

    # Code generation templates
    "jinja2>=3.1.0",

    # Session persistence
    "python-dotenv>=1.0.0",

    # Tiktoken for token-based chunking
    "tiktoken>=0.7.0",
]

[project.optional-dependencies]
# ── Individual vector DB extras ──────────────────────────────────────────────
pinecone = ["langchain-pinecone>=0.2.0", "pinecone-client>=4.0.0"]
qdrant = ["langchain-qdrant>=0.2.0", "qdrant-client>=1.9.0"]
weaviate = ["langchain-weaviate>=0.0.3", "weaviate-client>=4.0.0"]
milvus = ["pymilvus>=2.4.0"]
redis = ["redis>=5.0.0"]
pgvector = ["psycopg2-binary>=2.9.0", "pgvector>=0.3.0"]
elasticsearch = ["elasticsearch>=8.0.0"]
opensearch = ["opensearch-py>=2.4.0"]

# ── Individual evaluation framework extras ────────────────────────────────────
ragas = ["ragas>=0.2.0"]
deepeval = ["deepeval>=1.0.0"]
trulens = ["trulens-core>=1.0.0", "trulens-apps-langchain>=1.0.0"]
langsmith = ["langsmith>=0.1.0"]
langfuse = ["langfuse>=3.0.0"]
arize-phoenix = ["arize-phoenix>=4.0.0", "openinference-instrumentation-langchain>=0.1.0"]

# ── Individual reranker extras ────────────────────────────────────────────────
rerankers = ["flashrank>=0.2.0", "cohere>=5.0.0"]

# ── Production — installs EVERYTHING for full feature support ─────────────────
# Run: pip install -e ".[production]"
production = [
    # All vector DBs
    "langchain-pinecone>=0.2.0",
    "pinecone-client>=4.0.0",
    "langchain-qdrant>=0.2.0",
    "qdrant-client>=1.9.0",
    "langchain-weaviate>=0.0.3",
    "weaviate-client>=4.0.0",
    "pymilvus>=2.4.0",
    "redis>=5.0.0",
    "psycopg2-binary>=2.9.0",
    "pgvector>=0.3.0",
    "elasticsearch>=8.0.0",
    "opensearch-py>=2.4.0",
    # All evaluation frameworks
    "ragas>=0.2.0",
    "deepeval>=1.0.0",
    "trulens-core>=1.0.0",
    "trulens-apps-langchain>=1.0.0",
    "langsmith>=0.1.0",
    "langfuse>=3.0.0",
    # Rerankers
    "flashrank>=0.2.0",
    "cohere>=5.0.0",
]

# ── Development / testing ─────────────────────────────────────────────────────
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.23.0",
    "hypothesis>=6.100.0",
    "coverage>=7.4.0",
]

[project.scripts]
ms-rag = "ms_rag.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ms_rag*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["ms_rag"]
omit = ["tests/*", "ms_rag/codegen/templates/*"]
